--- a/style.css
+++ b/style.css
@@ -28,6 +28,17 @@ h1 {
     padding-bottom: 8% ;
     
 }
+.circle1 {
+    background-image:url("Assets/Whatever.jpg");
+    background-size:90px;
+    width:65px;
+    height:65px;
+    border-bottom-left-radius: 600px ;
+    border-bottom-right-radius: 600px ;
+    border-top-left-radius: 600px ;
+    border-top-right-radius: 600px ;
+    margin-bottom: 5px;
+}
 .circle {
     background-image:url("Assets/elon-musk.jpg");
     background-size:90px;
